--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Naveen Vinta Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/nvinta/resume/blob/main/Naveen_Vinta_CV4.pdf?raw=true&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/nvinta/resume/blob/5889205b2fe7bf122945dc2916fa1ac1a2dcd3b4/Naveen%20Vinta%20-%20CV4.pdf
+?raw=true&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
